style: Added overflow hidden to prevent white space at bottom of home page container on mobile.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #343434;
+  overflow: hidden;
 }
 
 .home-section {
@@ -34,6 +35,7 @@
 
 .home-section-right {
   /* width: 100%; */
+  padding-top: 5%;
   height: 100%;
   display: flex;
   flex-direction: column;
